--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "preboot": "4.5.2",
     "raw-loader": "0.5.1",
     "reflect-metadata": "0.1.10",
-    "rxjs": "5.4.2",
+    "rxjs": "^5.5.12",
     "style-loader": "0.18.2",
     "to-string-loader": "1.1.5",
     "typescript": "2.4.1",
@@ -58,5 +58,10 @@
     "webpack-hot-middleware": "2.18.2",
     "webpack-merge": "4.1.0",
     "zone.js": "0.8.12"
+  },
+  "dependencies": {
+    "@auth0/auth0-angular": "^1.10.1",
+    "@types/auth0-js": "^9.14.6",
+    "auth0-js": "^9.19.0"
   }
 }
